# versioner

./: .pre-commit-hooks.yaml
examples/: project.godot
versioner/: LICENSE.txt  README.md  pyproject.toml
versioner/src/versioner/: __about__.py  __init__.py  godot-version.py  semver.py
